--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -7,12 +7,23 @@
     <string name="next">下一页</string>
     <string name="previous">上一页</string>
     <string name="expression">表达式</string>
-    <string name="mode_rad">弧度制</string>
+    <string name="menu_item_rad">弧度制</string>
     <string name="accuracy">小数精确位数：</string>
     <string name="calculate">计算</string>
     <string name="hide_dedicated_keyboard">隐藏键盘</string>
-    <string name="invalid_expression">请确认表达式无误后重试。</string>
+    <string name="invalid_expression">请检查表达式后重试。</string>
     <string name="show_dedicated_keyboard">显示键盘</string>
-    <string name="mode_deg">角度制</string>
+    <string name="menu_item_deg">角度制</string>
     <string name="action_done">完成</string>
+    <string name="dec_accu_dialog_title">小数精确位数</string>
+    <string name="dec_accu_dialog_msg">在此处控制需要保留的小数位数。当前为 %d。</string>
+    <string name="dialog_button_ok">完成</string>
+    <string name="dialog_button_cancel">取消</string>
+    <string name="toast_msg_saved">已保存。</string>
+    <string name="toast_msg_cancelled">已取消。</string>
+    <string name="menu_item_about">关于</string>
+    <string name="menu_item_accuracy">小数位数</string>
+    <string name="dec_accu_dialog_save_return_msg">小数位数已设为 %d。</string>
+    <string name="rad_item_return_msg">已设为弧度制。</string>
+    <string name="deg_item_return_msg">已设为角度制。</string>
 </resources>
