--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,23 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="expression">Expression</string>
-    <string name="mode_rad">Mode: RAD</string>
+    <string name="menu_item_rad">RAD</string>
     <string name="accuracy">"Accuracy: "</string>
     <string name="calculate">Calculate</string>
     <string name="hide_dedicated_keyboard">Hide Dedicated Keyboard</string>
     <string name="invalid_expression">Invalid expression.</string>
     <string name="show_dedicated_keyboard">Show Dedicated Keyboard</string>
-    <string name="mode_deg">Mode: DEG</string>
+    <string name="menu_item_deg">DEG</string>
     <string name="action_done">Done</string>
+    <string name="dec_accu_dialog_title">Decimal Accuracy</string>
+    <string name="dec_accu_dialog_msg">Control how many digits you\'d like the answer to have. Currently %d.</string>
+    <string name="dialog_button_ok">OK</string>
+    <string name="dialog_button_cancel">Cancel</string>
+    <string name="toast_msg_saved">Saved.</string>
+    <string name="toast_msg_cancelled">Cancelled.</string>
+    <string name="menu_item_about">About</string>
+    <string name="menu_item_accuracy">Accuracy</string>
+    <string name="dec_accu_dialog_save_return_msg">Accuracy set to %d.</string>
+    <string name="rad_item_return_msg">Now in Radian mode.</string>
+    <string name="deg_item_return_msg">Now in Degree mode.</string>
 </resources>
