--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <string name="first_fragment_label">自由计算器 by HYY</string>
     <string name="expression">表达式</string>
     <string name="menu_item_rad">弧度制</string>
-    <string name="accuracy">小数精确位数：</string>
+    <string name="accuracy">小数精确位数：%d</string>
     <string name="calculate">计算</string>
     <string name="hide_dedicated_keyboard">隐藏键盘</string>
     <string name="invalid_expression">请检查表达式后重试。</string>
@@ -13,7 +13,7 @@
     <string name="menu_item_deg">角度制</string>
     <string name="action_done">完成</string>
     <string name="dec_accu_dialog_title">小数精确位数</string>
-    <string name="dec_accu_dialog_msg">在此处控制需要保留的小数位数。当前为 %d。</string>
+    <string name="dec_accu_dialog_msg">在此处控制需要保留的小数位数。</string>
     <string name="dialog_button_ok">完成</string>
     <string name="dialog_button_cancel">取消</string>
     <string name="toast_msg_saved">已保存。</string>
@@ -24,7 +24,14 @@
     <string name="rad_item_return_msg">已设为弧度制。</string>
     <string name="deg_item_return_msg">已设为角度制。</string>
     <string name="about_freecalc">关于自由计算器</string>
-    <string name="made_by_horace">HoraceHYY 出品</string>
+    <string name="made_by_horace">v1.5.1 HoraceHYY 出品</string>
     <string name="more_options">更多设置</string>
     <string name="override_form">计算后覆盖原式</string>
+    <string name="tip_cursor_left">光标左移</string>
+    <string name="tip_cursor_right">光标右移</string>
+    <string name="options_calc_title">计算</string>
+    <string name="ovr_form_tip">计算后结果将覆盖输入框中的式子。</string>
+    <string name="about_github">GitHub 仓库: https://github.com/HoraceHuang-ui/FreeCalc-Android</string>
+    <string name="about_email">邮箱: horacehuang17@gmail.com</string>
+    <string name="about_wechat">微信 ID: HoraceHYY</string>
 </resources>
