--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,20 +11,16 @@
     <string name="invalid_expression">Invalid expression.</string>
     <string name="show_dedicated_keyboard">Show Keyboard</string>
     <string name="menu_item_deg">DEG</string>
-    <string name="action_done">Done</string>
-    <string name="dec_accu_dialog_title">Decimal Accuracy</string>
     <string name="dec_accu_dialog_msg">Control how many digits you\'d like the answer to have.</string>
     <string name="dialog_button_ok">OK</string>
     <string name="dialog_button_cancel">Cancel</string>
     <string name="toast_msg_saved">Saved.</string>
     <string name="toast_msg_cancelled">Cancelled.</string>
     <string name="menu_item_about">About</string>
-    <string name="menu_item_accuracy">Accuracy</string>
-    <string name="dec_accu_dialog_save_return_msg">Accuracy set to %d.</string>
     <string name="rad_item_return_msg">Now in Radian mode.</string>
     <string name="deg_item_return_msg">Now in Degree mode.</string>
     <string name="about_freecalc">About FreeCalc</string>
-    <string name="made_by_horace">v1.5.1 Made by Horace Huang</string>
+    <string name="made_by_horace">v1.5.5 Made by Horace Huang</string>
     <string name="more_options">More Options</string>
     <string name="override_form">Override Form</string>
     <string name="tip_cursor_left">Move cursor left</string>
@@ -33,5 +29,8 @@
     <string name="ovr_form_tip">Overrides the expression in the form by the calculation result.</string>
     <string name="about_github">GitHub repo: https://github.com/HoraceHuang-ui/FreeCalc-Android</string>
     <string name="about_email">Email: horacehuang17@gmail.com</string>
-    <string name="about_wechat">WeChat ID:</string>
+    <string name="about_wechat">WeChat ID: HoraceHYY</string>
+    <string name="abstract_mode">Abstract Mode</string>
+    <string name="abstract_mode_tip">Makes main UI more dramatic. May encounter errors on some devices.</string>
+    <string name="options_misc_title">Misc</string>
 </resources>
