--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="abstract_mode">Abstract Mode</string>
     <string name="abstract_mode_tip">Makes main UI more dramatic. May encounter errors on some devices.</string>
     <string name="options_misc_title">Misc</string>
+    <string name="options_general_title">General</string>
+    <string name="language">Language</string>
+    <string name="language_tip">英文</string>
+    <string name="language_nav_msg">Only available for Chinese and English. Takes effect on your whole system.</string>
 </resources>
